omod/src/main/compass/sass/mixins.scss
@import "colors";
@import "font-awesome.scss";

@mixin button($tcolor: #FFF, $bcolor: #DDD, $font: $text) {
  @include border-radius(3px);
  background-color: $bcolor;
  @include background(linear-gradient(top, $tcolor, $bcolor));
  border: $bcolor 1px solid;
  padding: 8px 20px;
  display: inline-block;
  line-height: 1em;
  color: $font;
  cursor: pointer;
  text-decoration: none;
  &:hover {
    background: lighten($bcolor, 2%);
    border-color: darken($bcolor, 5%);
  }

  i {
    font-size: 1.2em;
    margin: 0;
    padding: 0;
    line-height: .5em;
  }

  &.big {
    i {
      display: block;
      font-size: 50px;
      margin: 0 auto;
      padding: 10px;
    }
  }

  &.disabled {
    background: #EEE;
    border: #CCC 1px solid;
    color: #CCC;
    cursor: default;
  }

  &.print {
    padding: 10px;
    i {
      font-size: 1.5em;
    }
  }
}

@mixin scan-bar {
  display: inline-block;
  &:after {
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    display: inline-block;
    text-decoration: inherit;
    content: "\f02a";
    color: $text;
    font-size: 2em;
    position: absolute;
    right: 5px;
    top: 16%;
  }
}

@mixin check-box {
  -webkit-appearance: none;
  background-color: #fafafa;
  border: 1px solid #cacece;
  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
  padding: 9px;
  border-radius: 3px;
  display: inline-block;
  position: relative;

  &:active, &:checked:active {
    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
  }
   
  &:checked {
    background-color: #e9ecee;
    border: 1px solid #adb8c0;
    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
    color: #99a1a7;
  }
  
  &:checked:after {
    content: '\2714';
    font-size: 14px;
    position: absolute;
    top: 0px;
    left: 3px;
    color: #99a1a7;
  }
}

